# fontrendererdemo

./: CMakeLists.txt  README.md
include/core/: application.h  engine.h  eventhandler.h  screen.h
include/rendering/: font.h  fontrenderer.h  shader.h  shaperenderer.h  vertex.h
src/: main.cpp
src/core/: application.cpp  engine.cpp  screen.cpp
src/rendering/: font.cpp  fontrenderer.cpp  shader.cpp  shaperenderer.cpp
